settings scrollbar fix

--- a/DTM-18/DTM-18.css
+++ b/DTM-18/DTM-18.css
@@ -2127,18 +2127,31 @@ div:is(.sidebarOpen_cb9592, .threadSidebarOpen_f75fb0) .toolbar__9293f {
     padding-inline: var(--custom-standard-sidebar-view-standard-padding) var(--custom-standard-sidebar-view-sidebar-content-scrollbar-padding);
     width: 240px;
   }
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+  &::-webkit-scrollbar-track, &::-webkit-scrollbar-thumb {
+    background-clip: padding-box;
+    border: 2px solid transparent;
+    border-radius: var(--radius-round);
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--legacy-primary-700);
+  }
 }
 .fixedContent__409aa {
   background: var(--legacy-bg-secondary-alt);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   padding-top: 60px;
   &:after {
     background: linear-gradient(to bottom,var(--legacy-bg-secondary-alt),transparent);
-    left: 0;
-    right: 0;
+    height: var(--space-12);
+    opacity: 1;
     pointer-events: none;
+    right: 0;
   }
 }
 .navScroller__409aa {
